# gps_umd-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
.github/workflows/: main.yml
config/: gpsd_client.yaml
debian/: changelog  control  gbp.conf  rules
gps_msgs/: CHANGELOG.rst  package.xml
gps_tools/: CHANGELOG.rst  CMakeLists.txt  package.xml
gps_tools/src/: utm_odometry_component.cpp
gps_umd/: CHANGELOG.rst  package.xml
gpsd_client/: CHANGELOG.rst  CMakeLists.txt  package.xml
gpsd_client/include/gpsd_client/: gpsd_parser.hpp
gpsd_client/src/: client.cpp
include/gpsd_client/: gpsd_parser_factory.hpp
include/gpsd_client/parsers/: gpsd_parser_base.hpp  gpsd_parser_v16.hpp  gpsd_parser_v9.hpp
rpm/: ros-galactic-gps-msgs.spec  ros-galactic-gps-tools.spec  ros-galactic-gps-umd.spec  ros-galactic-gpsd-client.spec  ros-humble-gps-msgs.spec  ros-humble-gps-tools.spec  ros-humble-gps-umd.spec  ros-humble-gpsd-client.spec  ros-iron-gps-msgs.spec  ros-iron-gps-tools.spec  ros-iron-gps-umd.spec  ros-iron-gpsd-client.spec  ros-jazzy-gps-msgs.spec  ros-jazzy-gps-tools.spec  ros-jazzy-gps-umd.spec  ros-jazzy-gpsd-client.spec  ros-kilted-gps-msgs.spec  ros-kilted-gps-tools.spec  ros-kilted-gps-umd.spec  ros-kilted-gpsd-client.spec  ros-lyrical-gps-msgs.spec  ros-lyrical-gps-tools.spec  ros-lyrical-gps-umd.spec  ros-lyrical-gpsd-client.spec  ros-rolling-gps-msgs.spec  ros-rolling-gps-tools.spec  ros-rolling-gps-umd.spec  ros-rolling-gpsd-client.spec  template.spec
src/: client.cpp  gpsd_parser_factory.cpp  utm_odometry_to_navsatfix_component.cpp
src/parsers/: gpsd_parser_base.cpp
test/: test_gpsd_parser.cpp
tools/: test_against_gpsd.sh
